# easy_navigation

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml
backend/: .coverage  .env.example  .gitignore  Makefile  config.py  dependencies.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 330331e485c4_added_default_id_generation.py  401cc4711b22_add_users_table.py  a4ebec3331f0_added_default_id_generation.py
backend/db/: __init__.py  postgres.py
backend/helpers/: __init__.py  math.py
backend/models/: __init__.py  airport.py  base.py  user.py
backend/routers/: airport.py  base.py
backend/schemas/: __init__.py  airport.py  test.py
backend/services/: __init__.py  point_import.py
backend/tests/: test_calc_helper.py
backend/tests/services/: test_point_import.py
